# Ceptember

./: CMakeLists.txt  README.md
autumn/: raindrop.hpp
autumn/engine/: engine.cpp
autumn/fileWorker/: fileSearch.cpp
autumn/files/logs/: frameworkLogs.txt
autumn/httpController/: httpController.cpp
autumn/internalHeaders/: MultipartParser.hpp  deleteFile.hpp  docsWorker.hpp  fileReader.hpp  fileSearch.hpp  handleRequest.hpp  parser.hpp  str_switch.h  videoWorker.hpp
autumn/logger/: logger.cpp
autumn/parser/: handleRequest.cpp  parser.cpp
autumn/parser/MultipartParser/: MultipartParser.cpp
autumn/parser/picohttpparser/: picoHttpParser.c
autumn/publicHeaders/: fileSaver.hpp  httpController.hpp  logger.hpp  request.hpp
autumn/staticHandler/: staticHandler.cpp
autumn/utils/deleteFile/: deleteFile.cpp
autumn/utils/workers/docsWorker/: docsWorker.cpp
autumn/utils/workers/fileWorker/: fileWriter.cpp
autumn/utils/workers/requestBodiesWorker/: requestBodiesWorker.cpp
core/: raindrop.hpp
core/engine/: engine.cpp
core/entity/: requestEntity.cpp
core/files/logs/: frameworkLogs.txt
core/httpController/: httpController.cpp
core/internalHeaders/: baseWorker.hpp  fileWriter.hpp  parser.hpp  photoWorker.hpp  requestBodiesWorker.hpp  staticHandler.hpp  txtWorker.hpp  videoWorker.hpp
core/parser/: parser.cpp
core/publicHeaders/: basicResponse.h  engine.hpp  fileSaver.hpp  httpController.hpp  requestEntity.hpp  responseBuilder.hpp
core/utils/fileSaver/: fileSaver.cpp
core/utils/responseBuilder/: responseBuilder.cpp
core/utils/workers/fileWorker/: fileReader.cpp
core/utils/workers/photoWorker/: photoWorker.cpp
core/utils/workers/txtWorker/: txtWorker.cpp
core/utils/workers/videoWorker/: videoWorker.cpp
logs/: frameworkLogs.txt
src/main/: main.cpp
src/main/handlers/: DELETE.cpp  GET.cpp  POST.cpp  PUT.cpp
src/static/: index.html  script_main.js  style_main.css
src/static/uploadPage/: index.html  script_upload.js  style_upload.css
